fix: 修复token越过限制的问题
